<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="download">下载</string>
<string name="update">更新</string>
    <string name="app_name">helloworld</string>
    <string name="action_settings">Settings</string>
    <string name="city">城市</string>
    <string name="temperature">温度:</string>
    <string name="temperature_low">最低温度:</string>
    <string name="temperature_hight">最高温度:</string>
    <string name="visibility">能见度:</string>
    <string name="sunrise">日出:</string>
    <string name="sunset">日落:</string>
    <string name="pressure">气压:</string>
    <string name="humidity">湿度:</string>
    <string name="chill">风力:</string>
    <string name="direction">风向:</string>
    <string name="speed">风速:</string>
    <string name="pub">更新日期:</string>
    <string name="weather">天气</string>
    <string name="unkown">未知</string>
    <string name="exit">退出</string>
    <string name="share">分享</string>
    <string name="degrees">级</string>
    <string name="aboutvisivility">大气能见度(Visibility)是反映大气透明度的一个指标。一般定义为具有正常视力的人在当时的天气条件下还能够看清楚目标轮廓的最大地面水平距离。还有一种定义为目标的最后一些特征已经消失的最小距离。</string>
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="confirmexit">再按一次退出</string>

</resources>